tests/ui/errors/snapshots/infer_spread_missing_required_positional_arg.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Wrong argument count
   ╭─[test.lis:5:3]
 4 │ fn test(rest: Slice<string>) -> Result<string, error> {
 5 │   url.JoinPath(rest...)
   ·   ──────────┬──────────
   ·             ╰── expected `(string)`, found `()`
 6 │ }
   ╰────
  help: This function expects 1 argument but received 0 arguments · code: [infer.arg_count_mismatch]
