tests/ui/errors/snapshots/infer_spread_on_non_variadic.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Wrong argument count
   ╭─[test.lis:5:3]
 4 │ fn test(args: Slice<int>) {
 5 │   takes_int(args...)
   ·   ─────────┬────────
   ·            ╰── expected `(int)`, found `()`
 6 │ }
   ╰────
  help: This function expects 1 argument but received 0 arguments · code: [infer.arg_count_mismatch]
