tests/ui/errors/snapshots/infer_statement_as_tail.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Statement used as value
   ╭─[test.lis:3:3]
 2 │ fn test() -> int {
 3 │   let _ = 1
   ·   ────┬────
   ·       ╰── this is a statement, not an expression
 4 │ }
   ╰────
  help: The last item in this block must be an expression that produces a value. Statements like `let`, `=`, `task`, and `defer` do not produce values · code: [infer.statement_as_tail]
