tests/ui/errors/snapshots/infer_statement_as_tail_in_break_payload.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Missing value at end of block
   ╭─[test.lis:4:13]
 3 │   let r: int = loop {
 4 │     break { let _ = 1 }
   ·             ────┬────
   ·                 ╰── produces `()`
 5 │   }
   ╰────
  help: This block is of type `()` because its last expression produces `()`, but the block was expected to be of type `int`. End the block with an expression that produces `int` · code: [infer.statement_as_tail]
