tests/ui/errors/snapshots/infer_statement_as_tail_in_if_branch.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Missing value at end of block
   ╭─[test.lis:4:5]
 3 │   if flag {
 4 │     let _ = 1
   ·     ────┬────
   ·         ╰── produces `()`
 5 │   } else {
   ╰────
  help: This block is of type `()` because its last expression produces `()`, but the block was expected to be of type `int`. End the block with an expression that produces `int` · code: [infer.statement_as_tail]
