tests/ui/errors/snapshots/infer_statement_as_tail_in_let_initializer.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Missing value at end of block
   ╭─[test.lis:3:23]
 2 │ fn test() {
 3 │   let i = if true { { let _ = 1 } } else { 1 }
   ·                       ────┬────
   ·                           ╰── produces `()`
 4 │   let _ = i
   ╰────
  help: This block is of type `()` because its last expression produces `()`, but the block was expected to be of type `int`. End the block with an expression that produces `int` · code: [infer.statement_as_tail]
