tests/ui/errors/snapshots/infer_statement_as_tail_in_match_arm.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Statement used as value
   ╭─[test.lis:4:12]
 3 │   match x {
 4 │     1 => { let _ = 1 },
   ·            ────┬────
   ·                ╰── this is a statement, not an expression
 5 │     _ => 2,
   ╰────
  help: The last item in this block must be an expression that produces a value. Statements like `let`, `=`, `task`, and `defer` do not produce values · code: [infer.statement_as_tail]
